# debunk-this-server

./: .env.template  .gitignore  Cargo.toml  README.md  Taskfile.yaml
db/migrations/: 01_Initial.sql  02_Prompts.sql
http/: main.http
migrations/: V1__Initial.sql
src/: main.rs  migrate.rs  settings.rs  state.rs
src/api/: api.rs  errors.rs  mod.rs  prompt.rs  synthesize.rs
src/core/: mod.rs  processings.rs  prompt.rs  video_repository.rs  video_synthesis.rs
src/core/analysis/: analyzer.rs  mod.rs  model.rs  tools.rs
src/core/transcript/: base.rs  mod.rs  youtube.rs
src/core/video/: video.rs
