[package]
name = "debunk-this"
version = "0.1.0"
edition = "2024"
default-run = "debunk_this"

[dependencies]
axum = "0.8.1"
rig-core = "0.9.1"
schemars = "0.8.22"
ytranscript = "0.1.0"
tokio = { version = "1.44.0", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
anyhow = "1.0.97"
config = "0.15.11"
reqwest = { version = "0.12.14", features = ["json"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
rustypipe = "0.11.0"
refinery = { version = "0.8.16", features = ["postgres"] }
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }


[[bin]]
name = "migrate"
path = "src/migrate.rs"

[[bin]]
name = "debunk_this"
path = "src/main.rs"
