[package]
name = "debunk-this"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
rig-core = "0.9.1"
schemars = "0.8.22"
ytranscript = "0.1.0"
tokio = { version = "1.44.0", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
anyhow = "1.0.97"
config = { version = "0.15.11", features = ["convert-case"] }
reqwest = { version = "0.12.14", features = ["json"] }
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
rustypipe = "0.11.0"
url = "2.5.4"
chrono = "0.4.40"
shuttle-runtime = "0.53.0"
shuttle-shared-db = { version = "0.53.0", features = ["postgres", "sqlx"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
shuttle-axum = "0.53.0"
uuid = { version = "1.16.0", features = ["v4"] }
